--- a/parsing.ipynb
+++ b/parsing.ipynb
@@ -10917,7 +10917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10970,8 +10970,7 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "def calc_points(df, filename):\n",
-    "    \n",
+    "def calc_points(df, filename, friend):\n",
     "    past_r = None\n",
     "    total_points = 0\n",
     "    for r in df.iterrows():\n",
@@ -10980,10 +10979,10 @@
     "            hr = r[1]['heart_rate']\n",
     "            if hr < 120:\n",
     "                hr = 0\n",
-    "            points = hr * t_delta\n",
+    "            points = max((hr-friend.resting_hr),0)\n",
+    "            points = points * t_delta\n",
     "            total_points += points\n",
     "        past_r = r\n",
-    "\n",
     "    return total_points\n",
     "\n",
     "files = os.listdir(os.getcwd()+'/data')\n",
@@ -11003,7 +11002,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {
     "scrolled": false
    },
@@ -11317,37 +11323,39 @@
     "            print(len(df))\n",
     "            if len(df) > 0 and (130 < df['heart_rate']).any():\n",
     "                plot(df, filename+str(i))\n",
-    "                points = calc_points(df, filename)\n",
     "                for f in friends:\n",
     "                    if f.name in filename:\n",
-    "                        f.points += points\n",
-    "    except:\n",
-    "        pass"
+    "                        f.points += calc_points(df, filename, f)\n",
+    "    except Exception as e :\n",
+    "        print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.friend'>: {'name': 'sholto', 'resting_hr': 56, 'points': 17091.0}\n",
-      "        {  \"name\":\"sholto\", \"value\":17091,},\n",
+      "<class '__main__.friend'>: {'name': 'sholto', 'resting_hr': 56, 'points': 9755.0}\n",
+      "        {  \"name\":\"sholto\", \"value\":9755,},\n",
       "\n",
-      "<class '__main__.friend'>: {'name': 'chris', 'resting_hr': 60, 'points': 13926.0}\n",
-      "        {  \"name\":\"chris\", \"value\":13926,},\n",
+      "<class '__main__.friend'>: {'name': 'chris', 'resting_hr': 60, 'points': 8106.0}\n",
+      "        {  \"name\":\"chris\", \"value\":8106,},\n",
       "\n",
-      "<class '__main__.friend'>: {'name': 'oli', 'resting_hr': 48, 'points': 9518.633333333335}\n",
-      "        {  \"name\":\"oli\", \"value\":9518,},\n",
+      "<class '__main__.friend'>: {'name': 'oli', 'resting_hr': 48, 'points': 6781.833333333338}\n",
+      "        {  \"name\":\"oli\", \"value\":6781,},\n",
       "\n",
-      "<class '__main__.friend'>: {'name': 'mia', 'resting_hr': 56, 'points': 11713.500000000007}\n",
-      "        {  \"name\":\"mia\", \"value\":11713,},\n",
+      "<class '__main__.friend'>: {'name': 'mia', 'resting_hr': 56, 'points': 7955.900000000007}\n",
+      "        {  \"name\":\"mia\", \"value\":7955,},\n",
       "\n",
-      "<class '__main__.friend'>: {'name': 'kacy', 'resting_hr': 60, 'points': 5894.9000000000015}\n",
-      "        {  \"name\":\"kacy\", \"value\":5894,}];\n",
+      "<class '__main__.friend'>: {'name': 'galen', 'resting_hr': 57, 'points': 4509.150000000002}\n",
+      "        {  \"name\":\"galen\", \"value\":4509,},\n",
+      "\n",
+      "<class '__main__.friend'>: {'name': 'kacy', 'resting_hr': 60, 'points': 3815.900000000001}\n",
+      "        {  \"name\":\"kacy\", \"value\":3815,}];\n",
       "\n"
      ]
     }
@@ -11411,7 +11419,7 @@
    ],
    "source": [
     "for f in friends:\n",
-    "    print(f.name)"
+    "    print(f)"
    ]
   },
   {
